# prairielearn-proctoring

./: .env.example  .gitignore  =0.27.0  MILESTONES.md  README.md  env.example  events.jsonl  pyproject.toml
data/dashboard/: dashboard.sqlite3
data/sessions/SUA_TURMA_20260416_125017/: events.jsonl
data/sessions/SUA_TURMA_20260416_125037/: events.jsonl
data/sessions/SUA_TURMA_20260416_125216/: events.jsonl
data/sessions/SUA_TURMA_20260416_125342/: events.jsonl
data/sessions/SUA_TURMA_20260416_125401/: events.jsonl
data/sessions/SUA_TURMA_20260416_130522/: events.jsonl
data/sessions/SUA_TURMA_20260416_131521/: events.jsonl
data/sessions/T2026-T1_20260422_163339/: events.jsonl
proctor_station.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: bootstrap.sh  calibrate_gaze.py  download_models.sh  enroll.py  install_systemd_service.sh  patch_face_models.py  test_camera.py  test_integration.py
src/api/: __init__.py  routes.py  server.py
src/core/: autostart.py  config.py  cpu_affinity.py  dashboard_sync.py  local_s3_client.py  models.py  s3_client.py  session.py
src/dashboard/: __init__.py  app.py  models.py  store.py
src/face/: detector.py  recognizer.py
src/kiosk/: chromium.py  lockdown.py  overlay.py  overlay_app.py  reidentify.py
src/proctor/: engine.py  events.py  gaze.py
src/recorder/: capture.py  uploader.py
systemd/: proctor.service
tests/: test_dashboard.py  test_dashboard_sync.py  test_face_recognition.py  test_kiosk.py  test_logs.py  test_proctor_engine.py  test_recorder.py  test_session_manager.py
(+40 files in other folders)
