[project]
name = "proctor-station"
version = "0.1.0"
description = "NUC-based proctoring station with face recognition, recording, and browser lockdown"
requires-python = ">=3.12"
dependencies = [
    "dlib>=19.24",
    "opencv-python-headless>=4.9.0",
    "mediapipe>=0.10.9",
    "numpy>=1.26.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "boto3>=1.34.0",
    "Pillow>=10.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"